[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yourdudeken-mpesa-sdk"
version = "0.1.0"
description = "Production-grade Python SDK for Safaricom M-Pesa Daraja API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mpesa", "safaricom", "daraja", "payment", "mobile-money"]
authors = [
  { name = "M-Pesa SDK Team" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Office/Business :: Financial",
]

dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100.0"]
django = ["django>=4.2.0"]
flask = ["flask>=2.3.0"]
all = [
  "yourdudeken-mpesa-sdk[fastapi,django,flask]",
]

[project.urls]
Homepage = "https://github.com/yourdudeken/mpesa-sdk"
Repository = "https://github.com/yourdudeken/mpesa-sdk"

[tool.hatch.envs.default]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
  "pytest>=8.0.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"

[tool.hatch.build.targets.wheel]
packages = ["mpesa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
